home page refacto front ok

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,20 +1,14 @@
-
 <!-- header with background and CTA-->
 
 <!-- background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url(https://images.unsplash.com/photo-1609502514041-98e64ceb92a7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=564&q=80) -->
 
-<%#= image_url('wave-background.svg') %>
-
 <header class="h-screen">
-  <div class="flex flex-col items-center justify-evenly bg-cover bg-center h-95/100 max-w-7xl mx-auto" style="background-image: url(<%= image_url('wave-background.svg') %>);">
+  <div class="flex flex-col items-center justify-evenly bg-cover bg-center h-92/100 max-w-7xl mx-auto" style="background-image: url(<%= image_url('wave-background.svg') %>);">
     <div class="px-4 text-center max-w-xs lg:max-w-sm xl:max-w-lg">
       <h1 class="text-white font-bold font-cursive tracking-tight text-3xl lg:text-4xl xl:text-5xl">Objets en céramiques fait main</h1>
     </div>
     <div>
-
-
-      <%= link_to "Découvrir", items_path, class:'px-6 py-4 uppercase tracking-tight text-sm text-white font-semibold border-2 border-white rounded-xl hover:bg-white hover:text-japonica-500 focus:outline-none' %>
-
+      <%= link_to "Découvrir", items_path, class:'py-4 px-6 uppercase text-sm text-white font-semibold tracking-tight border-2 border-white rounded-xl hover:bg-white hover:text-japonica-500 focus:outline-none' %>
     </div>
   </div>
 </header>
@@ -22,9 +16,9 @@
 <main>
 
   <!-- first section with shop category buttons and last articles -->
-  <section data-controller="category-buttons" class="pt-4 pb-12 lg:pb-12 xl:pt-0 max-w-7xl mx-auto">
-    <div class="px-4">
-      <h2 class="text-center text-2xl font-black text-gray-800 font-cursive tracking-tight lg:text-3xl lg:pt-12 xl:text-4xl">Les dernières créations de mon atelier</h2>
+  <section data-controller="category-buttons" class="pb-12 max-w-7xl mx-auto">
+    <div class="-mt-4 px-4 lg:pt-12">
+      <h2 class="text-2xl font-black text-gray-800 font-cursive text-center tracking-tight lg:text-3xl xl:text-4xl">Les dernières créations de mon atelier</h2>
     </div>
 
 
@@ -75,22 +69,22 @@
       </div>
     </div> -->
 
-    <!-- last articles section -->
+    <!-- last items section -->
     <div class="py-8 overflow-x-auto scrollbars-hidden lg:pt-16 lg:overflow-x-hidden">
       <div class="px-4 inline-flex space-x-2 md:px-8 lg:justify-center lg:grid lg:grid-cols-3 lg:space-x-0 lg:gap-3 lg:px-16 2xl:px-0.5">
         <% @items.first(6).each do |item| %>
           <%= link_to item_path(item), class:"group" do %>
-            <div class="shadow-3xl rounded pb-2 w-60 lg:w-full focus:outline-none">
+            <div class="pb-2 w-60 shadow-3xl rounded lg:w-full focus:outline-none">
               <div class="relative h-64 lg:h-72 xl:h-60" style="padding-bottom: 80%">
                 <%= cl_image_tag item.photos[0].key, class:'rounded-t absolute h-full w-full inset-0 object-cover shadow'  %>
               </div>
               <div>
-                <div class="px-2 pt-4">
-                  <div class="text-gray-700 font-semibold tracking-tight truncate font-cursive"><%= item.title %></div>
+                <div class="pt-4 px-2">
+                  <div class="truncate text-gray-700 font-semibold tracking-tight font-cursive"><%= item.title %></div>
                 </div>
                 <% if item.sold? %>
                   <div class='flex justify-between items-center'>
-                    <div class="px-2 pt-2">
+                    <div class="pt-2 px-2">
                       <span class="font-medium text-gray-800"> <%= item.price %>€ </span>
                     </div>
                     <div class="px-2">
@@ -98,7 +92,7 @@
                     </div>
                   </div>
                 <% else %>
-                  <div class="px-2 pt-2">
+                  <div class="pt-2 px-2">
                     <span class="font-medium text-gray-800"> <%= item.price %>€ </span>
                   </div>
                 <% end %>
@@ -111,7 +105,7 @@
   </section>
 
 <!--   journal section -->
-  <section class="px-4 py-12 bg-gray-100 lg:pb-2 lg:pt-8 max-w-7xl mx-auto">
+  <section class="py-12 px-4 bg-gray-100 lg:pb-2 lg:pt-8 max-w-7xl mx-auto">
     <div class="flex justify-center">
       <svg class="w-16 h-16 lg:w-24 lg:h-24" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><path d="M24 12.506v26m0-26C21.664 10.954 18.492 10 15 10s-6.664.954-9 2.506v26C8.336 36.954 11.508 36 15 36s6.664.954 9 2.506m0-26C26.336 10.954 29.508 10 33 10c3.494 0 6.664.954 9 2.506v26C39.664 36.954 36.494 36 33 36c-3.492 0-6.664.954-9 2.506" stroke="#D97862" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/></svg>
     </div>
@@ -125,7 +119,7 @@
 <!--     grid des articles(3 pour l'instant) -->
     <div class="pt-8 grid grid-cols-2 gap-2 max-w-xl mx-auto lg:pt-0 lg:grid-cols-4 lg:max-w-4xl">
 
-<!--       premier article le plus récent en gros -->
+<!--       premier article le plus récent -->
       <div class="col-span-2 bg-white overflow-hidden shadow-2xl rounded lg:order-2 lg:my-12">
         <div class="relative" style="padding-bottom: 85%;">
           <span> <%= cl_image_tag Article.last.photo.key, class:'absolute h-full w-full inset-0 object-cover object-center shadow' %> </span>
@@ -148,8 +142,6 @@
       </div>
 
 <!-- deux autres article les plus récent après celui au dessus en petit en dessous -->
-
-
       <div class="bg-white overflow-hidden shadow-2xl rounded lg:order-1 lg:my-48">
         <div class="relative" style="padding-bottom: 80%;">
           <span> <%= cl_image_tag @articles[1].photo.key, class:'absolute h-full w-full inset-0 object-cover object-center shadow' %> </span>
