--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
 <!-- background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url(https://images.unsplash.com/photo-1609502514041-98e64ceb92a7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=564&q=80) -->
 
 <header class="h-screen">
-  <div class="flex flex-col items-center justify-evenly bg-cover bg-center h-92/100 max-w-7xl mx-auto" style="background-image: url(<%= image_url('wave-background.svg') %>);">
+  <div class="flex flex-col items-center justify-evenly bg-cover bg-center h-91/100 max-w-7xl mx-auto" style="background-image: url(<%= image_url('wave-background.svg') %>);">
     <div class="px-4 text-center max-w-xs lg:max-w-sm xl:max-w-lg">
       <h1 class="text-white font-bold font-cursive tracking-tight text-3xl lg:text-4xl xl:text-5xl">Objets en céramiques fait main</h1>
     </div>
@@ -17,7 +17,7 @@
 
   <!-- first section with shop category buttons and last articles -->
   <section data-controller="category-buttons" class="pb-12 max-w-7xl mx-auto">
-    <div class="-mt-4 px-4 lg:pt-12">
+    <div class=" px-4 lg:pt-12">
       <h2 class="text-2xl font-black text-gray-800 font-cursive text-center tracking-tight lg:text-3xl xl:text-4xl">Les dernières créations de mon atelier</h2>
     </div>
 
