--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,81 +1,89 @@
 
-<div class="lg:hidden">
+<div class="max-w-7xl mx-auto">
   <%= render "shared/navbar/navbar_light" %>
 </div>
 
+<!-- Try to not show navbar on this page
 <div class="hidden lg:block">
-  <%= render "shared/navbar" %>
-</div>
+  <%#= render "shared/navbar" %>
+</div> -->
 
 
-<div class="px-2 pb-24 lg:pt-8 max-w-7xl mx-auto">
-  <div class="flex flex-col-reverse">
-    <span class="font-bold text-gray-700 text-lg font-cursive md:text-xl lg:text-2xl 2xl:text-3xl"><%= @item.title %></span>
-    <span class="text-japonica-500 text-sm font-bold lg:text-lg"><%= @item.category %></span>
+<div class="pb-24 max-w-7xl mx-auto">
+  <div class="px-2 flex flex-col">
+    <span class="text-japonica-500 text-sm font-semibold lg:text-lg"><%= @item.category %></span>
+    <span class="text-gray-700 text-xl font-bold font-cursive lg:text-2xl 2xl:text-3xl"><%= @item.title %></span>
   </div>
 
 
 <!--   sliders de photos sur un petit écran en dessous de desktop -->
   <div class="pt-2 overflow-x-auto scrollbars-hidden lg:hidden">
-    <div class="inline-flex h-full space-x-2">
+    <div class="px-2 inline-flex h-full space-x-2">
       <% @item.photos.each do |photo| %>
         <div class="w-72 h-80">
           <div class="relative h-full" style="padding-bottom: 80%">
-            <%= cl_image_tag photo.key, class:'absolute h-full w-full inset-0 object-cover object-center shadow rounded-xl'  %>
+            <%= cl_image_tag photo.key, class:'absolute h-full w-full inset-0 object-cover object-center shadow rounded'  %>
           </div>
         </div>
       <% end %>
     </div>
   </div>
-  <div class="flex justify-end pt-1 lg:hidden">
-    <svg class="w-6 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7h12m0 0l-4-4m4 4l-4 4m0 6H4m0 0l4 4m-4-4l4-4"/></svg>
+  <div class="pt-1 px-1 flex justify-end lg:hidden">
+    <svg class="w-6 h-6 text-gray-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7h12m0 0l-4-4m4 4l-4 4m0 6H4m0 0l4 4m-4-4l4-4"/></svg>
   </div>
 
 <!-- grid de photos sur desktop -->
-  <div data-controller="slideshow" class="hidden max-h-screen lg:pt-2 lg:grid lg:grid-rows-2 lg:grid-cols-5 lg:gap-2">
+  <div data-controller="slideshow" class="hidden max-h-screen lg:pt-2 lg:px-2 lg:grid lg:grid-rows-2 lg:grid-cols-5 lg:gap-2">
     <div class="relative h-full row-span-2 col-span-3" style="padding-bottom: 80%">
-      <%= cl_image_tag @item.photos[0].key, class:'absolute h-full w-full inset-0 object-cover object-center shadow rounded-l-xl'  %>
+      <%= cl_image_tag @item.photos[0].key, class:'absolute h-full w-full inset-0 object-cover object-center shadow rounded-l-lg' %>
     </div>
     <div class="relative h-full col-span-1" style="padding-bottom: 80%">
-      <%= cl_image_tag @item.photos[2].key, class:'absolute h-full w-full inset-0 object-cover object-center shadow'  %>
+      <%= cl_image_tag @item.photos[2].key, class:'absolute h-full w-full inset-0 object-cover object-center shadow' %>
     </div>
     <div class="relative h-full col-span-1" style="padding-bottom: 80%">
-      <%= cl_image_tag @item.photos[3].key, class:'absolute h-full w-full inset-0 object-cover object-center shadow rounded-r-xl'  %>
+      <%= cl_image_tag @item.photos[3].key, class:'absolute h-full w-full inset-0 object-cover object-center shadow rounded-r-lg' %>
     </div>
 
     <div class="relative h-full col-span-2">
-      <%= cl_image_tag @item.photos[1].key, class:'absolute h-full w-full inset-0 object-cover object-center shadow rounded-r-xl'  %>
-      <button data-action="slideshow#show" class="absolute flex items-center space-x-2 right-2 bottom-2 px-1 py-1 bg-white text-gray-700 text-sm rounded-xl bg-opacity-80">
+      <%= cl_image_tag @item.photos[1].key, class:'absolute h-full w-full inset-0 object-cover object-center shadow rounded-r-lg'  %>
+
+<!--     this butoon hide everything and show a carousel with all photos -->
+      <button data-action="slideshow#show" class="absolute px-1 py-1 text-gray-700 text-sm flex items-center space-x-2 right-2 bottom-2 bg-white rounded-xl bg-opacity-80 hover:bg-opacity-100 focus:outline-none">
         <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M5 3a2 2 0 00-2 2v2a2 2 0 002 2h2a2 2 0 002-2V5a2 2 0 00-2-2H5zm0 8a2 2 0 00-2 2v2a2 2 0 002 2h2a2 2 0 002-2v-2a2 2 0 00-2-2H5zm6-6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V5zm0 8a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z"/></svg>
         <span class="font-bold">Afficher toutes les photos</span>
       </button>
+<!-- this is the carousel with all photos -->
       <div data-slideshow-target="allSlides" class="hidden fixed z-20 inset-0 w-full h-full bg-white">
-        <button data-action="slideshow#show" class="mx-4 mt-4 px-2 py-2">
-          <svg class="w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/></svg>
+        <!-- close button -->
+        <button data-action="slideshow#show" class="mx-4 mt-4 px-2 py-2 text-gray-700 hover:text-gray-400 focus:outline-none">
+          <svg class="w-8 h-8 " xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/></svg>
+        </button>
+        <!-- 2 arrows left and right -->
+        <button data-action="slideshow#previous" class="absolute inset-y-1/2 left-1 px-4 pt-4 pb-12 text-gray-700 hover:text-gray-400 focus:outline-none xl:left-5">
+          <svg class="w-8 h-8 fill-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/></svg>
+        </button>
+        <button data-action="slideshow#next" class="absolute inset-y-1/2 right-1 px-4 pt-4 pb-12 text-gray-700 hover:text-gray-400 focus:outline-none xl:right-5">
+          <svg class="w-8 h-8 fill-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"/></svg>
         </button>
 
-        <button data-action="slideshow#previous" class="absolute inset-y-1/2 left-1 px-4 pt-4 pb-12 focus:outline-none xl:left-5">
-          <svg class="w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/></svg>
-        </button>
-
-        <button data-action="slideshow#next" class="absolute inset-y-1/2 right-1 px-4 pt-4 pb-12 focus:outline-none xl:right-5">
-          <svg class="w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"/></svg>
-        </button>
-        <div class="flex justify-center 2xl:-mt-8">
-          <span data-slideshow-target="counter" class="text-xl">1&nbsp</span><span class="text-xl">/ <%= @item.photos.length %> </span>
+        <div class="flex justify-center xl:-mt-8 2xl:-mt-8">
+          <span data-slideshow-target="counter" class="text-xl text-gray-600 xl:text-2xl">1</span>
+          <span class="text-xl text-gray-600 xl:text-2xl">&nbsp/ <%= @item.photos.length %> </span>
         </div>
         <% @item.photos.each do |photo| %>
-          <div data-slideshow-target="slide" class="mt-4 relative max-w-4xl h-20 mx-auto" style="padding-bottom: 80%">
-            <%= cl_image_tag photo.key, class:'absolute inset-0 object-cover mx-auto object-center shadow rounded-xl xl:max-h-1/2'  %>
+          <div data-slideshow-target="slide" class="mt-12 relative max-w-4xl mx-auto lg:mt-24 2xl:mt-8" style="padding-bottom: 80%">
+            <%= cl_image_tag photo.key, class:'absolute inset-0 object-cover mx-auto object-center shadow rounded-lg lg:max-h-2/3 2xl:max-h-1/2'  %>
           </div>
         <% end %>
       </div>
     </div>
   </div>
 
-  <div class="md:flex md:flex-row-reverse md:justify-between">
+
+<!-- section price description etc... -->
+  <div class="px-2 md:flex md:flex-row-reverse md:justify-between">
     <div class="md:flex md:flex-col max-w-lg md:ml-2 md:w-2/5">
-      <div class="lg:border-2 lg:border-gray-200 lg:rounded-xl lg:border-opacity-70 lg:px-4 lg:pt-2 lg:pb-4 lg:mt-6 lg:sticky lg:top-5">
+      <div class="lg:sticky lg:top-5 lg:pt-2 lg:pb-4 lg:px-4 lg:mt-6 lg:border-2 lg:border-gray-200 lg:rounded-xl lg:border-opacity-70">
         <div class="-mt-4 lg:mt-0">
           <span class="font-medium text-gray-800 font-cursive text-2xl"><%= @item.price %>€</span>
         </div>
@@ -97,7 +105,7 @@
       </div>
     </div>
 
-
+<!-- 2sd part of section with 3 scrolling menu -->
     <div class="md:flex md:flex-col max-w-3xl md:mr-2 md:w-3/5">
       <div data-controller="item-descriptions">
         <div class="mt-4 md:-mt-6 flex justify-between items-center lg:mt-6">
@@ -108,7 +116,7 @@
           </button>
         </div>
         <div data-item-descriptions-target="descriptionToggleable">
-          <div class='px-4 pt-4 space-y-2'>
+          <div class='pt-4 px-4'>
             <div class="">
               <div class="space-y-2">
                 <div class="flex items-center space-x-2">
