--- a/app/views/shared/navbar/_navbar_light.html.erb
+++ b/app/views/shared/navbar/_navbar_light.html.erb
@@ -1,30 +1,6 @@
-<nav data-controller="menu">
-  <div class="flex items-center justify-between pt-4 px-2">
 
-
-    <div>
-      <%= link_to items_path do %>
-      <button class="focus:outline-none"><svg class="w-6 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/></svg></button>
-      <% end %>
-    </div>
-
-
-  <!--   <div>
-      <%#= link_to root_path do %>
-        <%#= image_tag "Logo.png", class:"rounded-3xl w-8" %>
-      <%#end %>
-    </div>
-
-
-    <div  class="flex items-center outline-none">
-      <button data-action="click->menu#toggle" id="options-menu" class="text-gray-600 focus:outline-none hover:text-gray-400">
-        <svg data-menu-target="open" class="w-6 " xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/></svg>
-        <svg data-menu-target="close" class="w-6 hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/></svg>
-      </button>
-
-    </div> -->
-  </div>
-  <!-- <div class="sticky">
-    <%#= current_user.nil? ? (render 'shared/menu_before_login') : (render 'shared/menu_after_login') %>
-  </div> -->
-</nav>
+<div class="py-2 px-2 lg:py-4">
+  <%= link_to items_path, class:'text-gray-700 focus:outline-none hover:text-gray-400' do %>
+    <svg class="w-8 h-8 fill-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/></svg>
+  <% end %>
+</div>
