--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -36,9 +36,9 @@
 <!-- Navbar sur desktop -->
 <nav class="hidden lg:contents">
 
-  <div class="sticky top-0 z-10 bg-white">
-    <div class="px-4 py-4 flex justify-between items-center border-b-2 border-gray-200 border-opacity-30 max-w-7xl mx-auto">
-      <div class="flex items-baseline space-x-8 xl:space-x-14">
+  <div class="sticky py-1 top-0 z-10 bg-white border-b-2 border-gray-200 border-opacity-30">
+    <div class="px-4 flex justify-between items-center max-w-7xl mx-auto">
+      <div class="py-4 flex items-baseline space-x-8 xl:space-x-14">
         <div>
           <%= link_to root_path do %>
             <div class="flex">
@@ -52,15 +52,15 @@
 
       </div>
 
-      <div class="flex items-center space-x-2">
+      <div class="py-2 flex items-center space-x-2">
         <% if current_user.nil? %>
           <div class="<%= params[:controller] == "users" ? 'px-2 py-1 rounded text-sm font-semibold text-gray-600 bg-gray-200 focus:outline-none xl:text-base' : 'px-2 py-1 rounded text-sm font-semibold text-gray-600 hover:bg-gray-100 focus:outline-none xl:text-base' %>">
             <%= link_to "Se connecter", new_user_session_path %>
           </div>
         <% else %>
-          <div data-controller="pic-menu" class="relative">
+          <div data-controller="pic-menu" class="relative flex items-center">
             <button data-action="click->pic-menu#toggle" class="focus:outline-none rounded-full border-2 border-transparent focus:border-2 focus:border-japonica-500">
-              <%= cl_image_tag current_user.profil_pic, class:'w-14 rounded-full border border-gray-300 focus:border-2 focus:border-japonica-500' %>
+              <%= cl_image_tag current_user.profil_pic, class:'w-12 rounded-full border border-gray-300 focus:border-2 focus:border-japonica-500' %>
             </button>
             <div data-pic-menu-target="toggleable" class="hidden absolute z-40 right-0 mr-1 w-60 flex flex-col items-start rounded overflow-hidden">
               <%= link_to "Mes comandes", orders_path, class:'px-3 py-3 text-gray-600 text-left w-full bg-white hover:bg-gray-100' %>
