--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,8 +10,8 @@
         <%= link_to "Découvrir", items_path, class:'py-3 px-4 text-base text-gray-700 font-black tracking-tight bg-japonica-400 border-2 border-white rounded-xl hover:bg-gray-900 hover:text-white focus:outline-none xl:px-6 xl:py-4 xl:text-lg' %>
       </div>
     </div>
-    <div class="pt-8 flex justify-center lg:absolute lg:pt-0 lg:-top-16 lg:-right-52 lg:w-3/4 xl:-top-40 2xl:-right-72">
-      <%= image_tag 'background.png', class:'h-72 object-cover md:h-96 lg:w-full lg:h-full' %>
+    <div class="pt-8 px-2 flex justify-center lg:absolute lg:pt-0 lg:-top-16 lg:-right-52 lg:w-3/4 xl:-top-40 2xl:-right-72">
+      <%= image_tag 'background.png', class:'object-cover md:h-96 lg:w-full lg:h-full' %>
     </div>
   </div>
 
