--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -65,7 +65,7 @@
     <div data-item-categories-target="allCategory" class="hidden px-2 pt-6 grid grid-cols-2 gap-2 md:px-6 lg:grid-cols-3 xl:grid-cols-4 lg:gap-4">
       <% @items.each do |item| %>
         <%= link_to item_path(item), class:"group" do %>
-            <div class="shadow-3xl rounded pb-2">
+            <div class="relative shadow-3xl rounded pb-2">
               <div class="relative" style="padding-bottom: 80%">
                 <%= cl_image_tag item.photos[0].key, class:'rounded-t absolute h-full w-full inset-0 object-cover shadow'  %>
               </div>
@@ -73,12 +73,12 @@
                 <div class="text-gray-700 font-semibold tracking-tight truncate font-cursive" ><%= item.title %></div>
               </div>
               <% if item.sold? %>
-                <div class='flex justify-between items-center'>
-                  <div class="px-2 pt-2">
-                    <span class="font-medium text-gray-800"> <%= item.price %>€ </span>
-                  </div>
-                  <div class="px-2">
+                <div class=''>
+                  <div class="absolute top-0 right-0 p-2">
                     <span class="rounded px-1 py-1 bg-gray-700 text-white text-xs font-bold">Vendu</span>
+                  </div>
+                  <div class="px-2 pt-2">
+                    <span class="font-medium text-gray-800 line-through"> <%= item.price %>€ </span>
                   </div>
                 </div>
               <% else %>
