--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,12 +3,12 @@
 <header class="lg:flex lg:justify-between lg:overflow-hidden lg:h-almostscreen relative">
 
     <div class="lg:h-5/6 lg:w-360 lg:mx-auto h-almostscreen">
-      <div class="h-1/3 lg:h-full">
+      <div class="h-1/3 lg:h-full relative z-10">
         <div class="lg:flex lg:flex-col lg:justify-center lg:h-full lg:px-16 2xl:px-0.5">
           <div class="pt-16 px-4 text-center lg:text-left">
             <h1 class="text-gray-700 font-bold font-cursive tracking-tight text-3xl xl:text-4xl">Objets en céramiques <br> fait main</h1>
           </div>
-          <div class="pt-12 flex justify-center lg:justify-start px-4 lg:pt-16">
+          <div class="pt-12 z-20 flex justify-center lg:justify-start px-4 lg:pt-16">
             <%= link_to "Découvrir", items_path, class:'py-3 px-4 text-base text-gray-700 font-black tracking-tight bg-japonica-400 border-2 border-white rounded-xl hover:bg-gray-900 hover:text-white focus:outline-none xl:px-6 xl:py-4 xl:text-lg' %>
           </div>
         </div>
@@ -17,7 +17,7 @@
         </div>
 
       </div>
-      <div class="pt-12 overflow-hidden h-2/3  lg:hidden">
+      <div class="pt-12 overflow-hidden opacity-60 h-2/3  lg:hidden">
         <svg class="h-full" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#374151" fill-opacity="1" d="M0,64L8.9,85.3C17.8,107,36,149,53,160C71.1,171,89,149,107,117.3C124.4,85,142,43,160,48C177.8,53,196,107,213,112C231.1,117,249,75,267,58.7C284.4,43,302,53,320,69.3C337.8,85,356,107,373,101.3C391.1,96,409,64,427,74.7C444.4,85,462,139,480,154.7C497.8,171,516,149,533,128C551.1,107,569,85,587,101.3C604.4,117,622,171,640,176C657.8,181,676,139,693,106.7C711.1,75,729,53,747,69.3C764.4,85,782,139,800,149.3C817.8,160,836,128,853,106.7C871.1,85,889,75,907,106.7C924.4,139,942,213,960,208C977.8,203,996,117,1013,122.7C1031.1,128,1049,224,1067,218.7C1084.4,213,1102,107,1120,85.3C1137.8,64,1156,128,1173,149.3C1191.1,171,1209,149,1227,133.3C1244.4,117,1262,107,1280,122.7C1297.8,139,1316,181,1333,186.7C1351.1,192,1369,160,1387,149.3C1404.4,139,1422,149,1431,154.7L1440,160L1440,320L1431.1,320C1422.2,320,1404,320,1387,320C1368.9,320,1351,320,1333,320C1315.6,320,1298,320,1280,320C1262.2,320,1244,320,1227,320C1208.9,320,1191,320,1173,320C1155.6,320,1138,320,1120,320C1102.2,320,1084,320,1067,320C1048.9,320,1031,320,1013,320C995.6,320,978,320,960,320C942.2,320,924,320,907,320C888.9,320,871,320,853,320C835.6,320,818,320,800,320C782.2,320,764,320,747,320C728.9,320,711,320,693,320C675.6,320,658,320,640,320C622.2,320,604,320,587,320C568.9,320,551,320,533,320C515.6,320,498,320,480,320C462.2,320,444,320,427,320C408.9,320,391,320,373,320C355.6,320,338,320,320,320C302.2,320,284,320,267,320C248.9,320,231,320,213,320C195.6,320,178,320,160,320C142.2,320,124,320,107,320C88.9,320,71,320,53,320C35.6,320,18,320,9,320L0,320Z"></path></svg>
       </div>
 
