--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -41,11 +41,11 @@
       <%= cl_image_tag @item.photos[2].key, class:'absolute h-full w-full inset-0 object-cover object-center shadow' %>
     </div>
     <div class="relative h-full col-span-1" style="padding-bottom: 80%">
-      <%= cl_image_tag @item.photos[3].key, class:'absolute h-full w-full inset-0 object-cover object-center shadow rounded-r-lg' %>
+      <%= cl_image_tag @item.photos[3].key, class:'absolute h-full w-full inset-0 object-cover object-center shadow rounded-tr-lg' %>
     </div>
 
     <div class="relative h-full col-span-2">
-      <%= cl_image_tag @item.photos[1].key, class:'absolute h-full w-full inset-0 object-cover object-center shadow rounded-r-lg'  %>
+      <%= cl_image_tag @item.photos[1].key, class:'absolute h-full w-full inset-0 object-cover object-center shadow rounded-br-lg'  %>
 
 <!--     this butoon hide everything and show a carousel with all photos -->
       <button data-action="slideshow#show" class="absolute px-1 py-1 text-gray-700 text-sm flex items-center space-x-2 right-2 bottom-2 bg-white rounded-xl bg-opacity-80 hover:bg-opacity-100 focus:outline-none">
@@ -71,8 +71,11 @@
           <span class="text-xl text-gray-600 xl:text-2xl">&nbsp/ <%= @item.photos.length %> </span>
         </div>
         <% @item.photos.each do |photo| %>
-          <div data-slideshow-target="slide" class="mt-12 relative max-w-4xl mx-auto lg:mt-24 2xl:mt-8" style="padding-bottom: 80%">
-            <%= cl_image_tag photo.key, class:'absolute inset-0 object-cover mx-auto object-center shadow rounded-lg lg:max-h-2/3 2xl:max-h-1/2'  %>
+          <div data-slideshow-target="slide" class="">
+            <%= cl_image_tag photo.key, class:'object-cover mx-auto object-center shadow rounded-lg h-threequarterscreen', style:'position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);'  %>
           </div>
         <% end %>
       </div>
