--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,14 +6,14 @@
       <div class="h-1/3 lg:h-full relative z-10">
         <div class="lg:flex lg:flex-col lg:justify-center lg:h-full lg:px-16 2xl:px-0.5">
           <div class="pt-16 px-4 text-center lg:text-left">
-            <h1 class="text-gray-700 font-bold font-cursive tracking-tight text-3xl xl:text-4xl">Objets en céramiques <br> fait main</h1>
+            <h1 class="text-gray-700 font-bold font-cursive tracking-tight text-3xl xl:text-4xl 2xl:text-5xl">Objets en céramiques <br> fait main</h1>
           </div>
           <div class="pt-12 flex justify-center lg:justify-start px-4 lg:pt-16">
-            <%= link_to "Découvrir", items_path, class:'py-3 px-4 text-base text-gray-700 font-black tracking-tight bg-japonica-400 border-2 border-white rounded-xl hover:bg-gray-900 hover:text-white focus:outline-none xl:px-6 xl:py-4 xl:text-lg' %>
+            <%= link_to "Découvrir", items_path, class:'py-3 px-4 text-base text-gray-700 font-black tracking-tight bg-japonica-400 border-2 border-white rounded-xl hover:bg-gray-700 hover:text-white focus:outline-none xl:px-6 xl:py-4 xl:text-lg' %>
           </div>
         </div>
         <div class="hidden lg:pt-12 lg:flex lg:justify-center lg:absolute  lg:-top-1/4 lg:w-4/5 lg:-right-1/4 xl:pt-0 2xl:w-full 2xl:-right-1/2 2xl:-top-1/3 ">
-          <%= image_tag 'background.png', class:'md:h-96 lg:w-full lg:h-full object-cover' %>
+          <%= image_tag 'background.png', class:'md:h-96 lg:w-full', style:'height: 175vh' %>
         </div>
 
       </div>
@@ -84,7 +84,7 @@
 
     <!-- last items section -->
     <div class="pt-6 overflow-x-auto scrollbars-hidden lg:pt-12 lg:overflow-x-hidden">
-      <div class="px-4 inline-flex space-x-2 md:px-8 lg:justify-center lg:grid lg:grid-cols-3 lg:space-x-0 lg:gap-4 lg:px-16 2xl:px-0.5 ">
+      <div class="px-4 pb-2 inline-flex space-x-2 md:px-8 lg:justify-center lg:grid lg:grid-cols-3 lg:space-x-0 lg:gap-4 lg:px-16 2xl:px-0.5 ">
         <% @items.first(6).each do |item| %>
           <%= link_to item_path(item), class:"" do %>
             <div class="relative pb-2 w-60 rounded-lg lg:w-full border-gray-200 border border-opacity-70 hover:shadow-3xl focus:outline-none">
@@ -210,21 +210,21 @@
           <div>
             <svg class="w-8 h-8 md:h-10 md:w-10 lg:h-12 lg:w-12 rounded-lg" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><path fill="#D97862" d="M0 0h48v48H0z"/><path fill-rule="evenodd" clip-rule="evenodd" d="M21.571 11.125c0-.564.256-1.104.712-1.503A2.615 2.615 0 0124 9c.644 0 1.262.224 1.717.622.456.399.712.94.712 1.503v11.688a1 1 0 00.355.75c.228.2.537.312.859.312.322 0 .63-.112.858-.311a1 1 0 00.356-.752V13.25c0-.564.256-1.104.712-1.503a2.615 2.615 0 011.717-.622c.644 0 1.261.224 1.717.622.455.399.711.94.711 1.503v9.563a1 1 0 00.356.75c.228.2.536.312.859.312.322 0 .63-.112.858-.311a1 1 0 00.356-.752V17.5c0-.564.256-1.104.711-1.503a2.615 2.615 0 011.717-.622c.645 0 1.262.224 1.718.622.455.399.711.94.711 1.503v10.625c0 1.953-.44 3.888-1.294 5.692-.854 1.805-2.107 3.445-3.685 4.826-1.579 1.382-3.453 2.477-5.515 3.225A19.129 19.129 0 0124 43c-2.233 0-4.443-.385-6.506-1.132-2.062-.748-3.936-1.843-5.515-3.225-1.578-1.381-2.83-3.02-3.685-4.826A13.278 13.278 0 017 28.125v-4.25c0-.564.256-1.104.711-1.503a2.615 2.615 0 011.718-.622c.644 0 1.261.224 1.717.622.455.399.711.94.711 1.503v5.313a1 1 0 00.356.75c.228.2.536.312.858.312.322 0 .631-.112.86-.311a1 1 0 00.355-.752V13.25c0-.564.256-1.104.711-1.503a2.615 2.615 0 011.717-.622c.644 0 1.262.224 1.718.622.455.399.71.94.71 1.503v9.563a1 1 0 00.357.75c.227.2.536.312.858.312.322 0 .631-.112.859-.311a1 1 0 00.355-.752V11.126z" fill="#fff"/></svg>        </div>
           <div class="ml-4 lg:ml-6">
-            <span class="text-white md:text-lg ">Je réalise <strong>seule</strong> et à la <strong>main</strong> tous <strong>les articles</strong> en vente sur le site</span>
+            <span class="text-white md:text-lg xl:text-xl ">Je réalise <strong>seule</strong> et à la <strong>main</strong> tous <strong>les articles</strong> en vente sur le site</span>
           </div>
         </div>
         <div class="flex items-start ">
           <div>
             <svg class="w-8 h-8 md:h-10 md:w-10 lg:h-12 lg:w-12 rounded-lg" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><path fill="#D97862" d="M0 0h48v48H0z"/><path d="M18 34a4 4 0 11-8 0 4 4 0 018 0v0zm20 0a4 4 0 11-8 0 4 4 0 018 0v0z" fill="#fff" stroke="#fff"/><path d="M30 34a4 4 0 118 0m-12-2V12a2 2 0 00-2-2H8a2 2 0 00-2 2v20a2 2 0 002 2h2l16-2zm0 0a2 2 0 01-2 2h-6l8-2zm0 0V16a2 2 0 012-2h5.172a2 2 0 011.414.586l6.828 6.828A2 2 0 0142 22.828V32a2 2 0 01-2 2h-2l-12-2zm0 0a2 2 0 002 2h2l-4-2zm-16 2a4 4 0 108 0h-8zm0 0a4 4 0 118 0h-8zm20 0a4 4 0 108 0h-8z" stroke="#fff" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/></svg>        </div>
           <div class="ml-4 lg:ml-6">
-            <span class="text-white md:text-lg">Livraison à <strong>domicile</strong> et <strong>100% gratuite</strong> avec la possibilité de <strong>suivre votre colis</strong></span>
+            <span class="text-white md:text-lg xl:text-xl">Livraison à <strong>domicile</strong> et <strong>100% gratuite</strong> avec la possibilité de <strong>suivre votre colis</strong></span>
           </div>
         </div>
         <div class="flex items-start ">
           <div>
             <svg class="w-8 h-8 md:h-10 md:w-10 lg:h-12 lg:w-12 rounded-lg" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><path fill="#D97862" d="M0 0h48v48H0z"/><path d="M36.728 11.272l-7.072 7.072 7.072-7.072zm-7.072 18.384l7.072 7.072-7.072-7.072zM18.344 18.344l-7.072-7.072 7.072 7.072zm0 11.312l-7.072 7.072 7.072-7.072zM42 24a18 18 0 11-36 0 18 18 0 0136 0zm-10 0a8 8 0 11-16.001 0A8 8 0 0132 24v0z" stroke="#fff" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/></svg>        </div>
           <div class="ml-4 lg:ml-6">
-            <span class="text-white md:text-lg">N'hésitez pas à me <strong>contacter</strong> pour toute <strong>question ou demande de réalisation</strong></span>
+            <span class="text-white md:text-lg xl:text-xl">N'hésitez pas à me <strong>contacter</strong> pour toute <strong>question ou demande de réalisation</strong></span>
           </div>
         </div>
         <div class="flex items-start ">
@@ -232,7 +232,7 @@
             <svg class="w-8 h-8 md:h-10 md:w-10 lg:h-12 lg:w-12 rounded-lg" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><path fill="#D97862" d="M0 0h48v48H0z"/><path d="M30.464 10.464l7.072 7.072-7.072-7.072zm3-3a5 5 0 117.072 7.072L13 42.072H6v-7.144L33.464 7.464v0z" stroke="#fff" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/></svg>
           </div>
           <div class="ml-4 lg:ml-6">
-            <span class="text-white md:text-lg">Réalisation <strong>sur-mesure</strong>, tous les objets sont <strong>uniques</strong></span>
+            <span class="text-white md:text-lg xl:text-xl">Réalisation <strong>sur-mesure</strong>, tous les objets sont <strong>uniques</strong></span>
           </div>
         </div>
       </div>
