--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,8 +12,8 @@
             <%= link_to "Découvrir", items_path, class:'py-3 px-4 text-base text-gray-700 font-black tracking-tight bg-japonica-400 border-2 border-white rounded-xl hover:bg-gray-700 hover:text-white focus:outline-none xl:px-6 xl:py-4 xl:text-lg' %>
           </div>
         </div>
-        <div class="hidden lg:pt-12 lg:flex lg:justify-center lg:absolute  lg:-top-1/4 lg:w-4/5 lg:-right-1/4 xl:pt-0 2xl:w-full 2xl:-right-1/2 2xl:-top-1/3 ">
-          <%= image_tag 'background.png', class:'md:h-96 lg:w-full', style:'height: 175vh' %>
+        <div class="hidden lg:flex lg:absolute lg:w-full lg:pl-8 lg:-right-1/3 lg:-top-1/3 ">
+          <%= image_tag 'background.png', class:'lg:w-full lg:object-cover lg:object-left', style:'height: 160vh' %>
         </div>
 
       </div>
