--- a/app/components/notification_component.html.erb
+++ b/app/components/notification_component.html.erb
@@ -1,6 +1,6 @@
-<div class="max-w-sm w-full bg-white shadow-lg rounded-lg pointer-events-auto mt-4 hidden" data-notification-action-url="<%= @data.dig(:action, :url) %>" data-notification-action-method="<%= @data.dig(:action, :method) %>" data-notification-timeout="<%= @data[:timeout] %>" data-controller="notification">
+<div class="max-w-sm w-full bg-gray-900 bg-opacity-90 shadow-lg rounded-lg pointer-events-auto hidden" data-notification-action-url="<%= @data.dig(:action, :url) %>" data-notification-action-method="<%= @data.dig(:action, :method) %>" data-notification-timeout="<%= @data[:timeout] %>" data-controller="notification">
   <div class="rounded-lg shadow-xs overflow-hidden">
-    <div class="p-4">
+    <div class="p-2">
       <div class="flex items-start">
         <div class="flex-shrink-0">
           <div class="<%= @icon_color_class %>">
@@ -8,11 +8,11 @@
           </div>
         </div>
         <div class="ml-3 flex-1 pt-0.5">
-          <p class="text-sm leading-5 font-medium text-gray-900">
+          <p class="text-sm font-bold text-white">
             <%= @data[:title] %>
           </p>
           <% if @data[:body].present? %>
-            <p class="mt-1 text-sm leading-5 text-gray-500">
+            <p class="mt-1 text-sm text-white">
               <%= @data[:body] %>
             </p>
           <% end %>
@@ -21,21 +21,21 @@
               <a <% if @data.dig(:action, :method) == 'get' %> href="<%= @data.dig(:action, :url) %>" <% else %> href="#" data-action="notification#run" <% end %> class="text-sm leading-5 font-medium text-indigo-600 hover:text-indigo-500 focus:outline-none focus:underline transition ease-in-out duration-150">
                 <%= @data.dig(:action, :name) %>
               </a>
-              <button data-action="notification#close" class="ml-6 text-sm leading-5 font-medium text-gray-700 hover:text-gray-500 focus:outline-none focus:underline transition ease-in-out duration-150">
+              <button data-action="notification#close" class="ml-6 text-sm leading-5 font-medium text-white hover:text-white focus:outline-none focus:underline transition ease-in-out duration-150">
                 <%= t('.dismiss') %>
               </button>
             </div>
           <% end %>
         </div>
         <div class="ml-4 flex-shrink-0 flex">
-          <button class="inline-flex text-gray-400 focus:outline-none focus:text-gray-500 transition ease-in-out duration-150" data-action="notification#close">
+          <button class="inline-flex text-white focus:outline-none focus:text-white transition ease-in-out duration-150" data-action="notification#close">
             <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"/></svg>
           </button>
         </div>
       </div>
     </div>
     <% if @data[:countdown] %>
-      <div class="bg-red-600 rounded-lg h-1 w-0" data-notification-target="countdown"></div>
+      <div class="bg-gray-200 rounded-lg h-1 w-0" data-notification-target="countdown"></div>
     <% end %>
   </div>
 </div>
