--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,5 +1,5 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+  <%= link_to "Se connecter", new_session_path(resource_name), class:'py-2 px-4 text-gray-400 font-medium border-2 border-gray-200 rounded-xl hover:bg-gray-50 hover:text-japonica-500' %> <br/>
 <% end %>
 
 <%#- if devise_mapping.registerable? && controller_name != 'registrations' %>
