about page ok for now

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
-<div class="lg:h-screen">
-  <div class="px-4 py-4 lg:max-w-7xl lg:mx-auto lg:h-4/5 lg:flex lg:space-x-8 lg:pt-12">
+<div class="lg:min-h-screen">
+  <div class="px-4 py-4 lg:max-w-6xl lg:mx-auto lg:h-4/5 lg:flex lg:space-x-8 lg:pt-12">
 
     <!-- photo on mobile -->
     <div class="relative lg:hidden" style="padding-bottom: 80%">
@@ -8,12 +8,25 @@
 
 <!--     photo on desktop -->
     <div class="hidden relative lg:w-1/2 lg:flex">
-      <%= image_tag "photo.png", class:"rounded h-full w-full inset-0 absolute object-cover" %>
+      <%= image_tag "photo.png", class:"h-full w-full inset-0 absolute object-cover object-left" %>
     </div>
-    <div class="flex flex-col pt-4 lg:w-1/2">
-      <span class="text-japonica-500 font-medium">Artiste</span>
-      <span class="font-bold text-xl pt-2">Mélina</span>
-      <p class="pt-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque rem, perspiciatis fugiat. Atque assumenda obcaecati odio mollitia dolorum optio officia cum, aliquid ratione, ullam, sunt amet libero in. Placeat, officiis? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum ullam, voluptatum laboriosam ipsa odio rerum fugit! Magnam sapiente iste culpa explicabo, quam possimus nulla quaerat expedita non eaque eius reiciendis. Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Vel accusantium aliquam, cumque fugiat ducimus magnam architecto vero ipsam perspiciatis, dolore aspernatur recusandae officiis quod incidunt corrupti pariatur mollitia, eum delectus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aliquam illo quis repellendus cum optio assumenda non libero maiores, placeat! Nostrum eius eveniet maxime, optio facere architecto labore in impedit?</p>
+    <div class="flex flex-col pt-4 lg:w-1/2 lg:pt-0">
+      <span class="font-bold text-xl text-gray-700">Bienvenue sur MabciaCeramic !</span>
+      <p class="pt-4 text-gray-600">
+
+Je m’appelle Mélina. <br><br>
+
+J'ai découvert l'argile étant petite, grâce à ma grand-mère qui a longtemps fait des expositions de pâte à sel et de céramique. Tout ce travail et la création de la boutique commence grâce à elle. Je lui rends d'ailleurs hommage avec le nom que porte la boutique. "Babcia" veut dire "mamie" en polonais, origine de ma grand-mère. J'ai seulement remplacé le B par le M, première lettre de mon prénom donnant donc "Mabcia". <br><br>
+
+Travailler l'argile est pour moi un moyen d'exprimer ma créativité et de me détacher du milieu scientifique dans lequel j'ai réalisé mes études supérieures. Même si bien-sûr, chaque étape menant à l'obtention d'une pièce finie s’explique par une série de processus physico-chimiques bien précis et hyper intéressants ! <br><br>
+
+La terre est une matière qui offre une multitude de possibilité, de l'objet décoratif à celui d'utilité quotidienne. Avec de l'imagination, de la technique et un peu de patience, il n'y a que très peu de limites. La terre m'est d'autant plus fascinante qu'une fois cuite, sa vie semble infinie. Contrairement à beaucoup de chose, une pièce qui sort du four semble exemptée des effets du temps. C’est d’ailleurs pour cela que des poteries sont souvent retrouvées sur les sites archéologiques. <br><br>
+
+Aujourd'hui, à travers cette matière, je vous partage une partie de mon univers. J'espère que vous saurez ressentir toute l'intention que je mets dans chacune de mes pièces et que vous l'apprécierez. <br><br>
+
+En vous souhaitant bon voyage !<br><br>
+
+Mélina</p>
     </div>
   </div>
 
