--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <div class="lg:min-h-screen">
-  <div class="px-4 py-4 lg:max-w-6xl lg:mx-auto lg:h-4/5 lg:flex lg:space-x-8 lg:pt-12">
+  <div class="px-4 py-4 lg:max-w-7xl lg:mx-auto lg:h-4/5 lg:flex lg:space-x-8 lg:pt-12">
 
     <!-- photo on mobile -->
     <div class="relative lg:hidden" style="padding-bottom: 80%">
@@ -8,11 +8,11 @@
 
 <!--     photo on desktop -->
     <div class="hidden relative lg:w-1/2 lg:flex">
-      <%= image_tag "photo.png", class:"h-full w-full inset-0 absolute object-cover object-left" %>
+      <%= image_tag "photo.png", class:" w-full inset-0 absolute object-cover object-left" %>
     </div>
     <div class="flex flex-col pt-4 lg:w-1/2 lg:pt-0">
       <span class="font-bold text-xl text-gray-700">Bienvenue sur MabciaCeramic !</span>
-      <p class="pt-4 text-gray-600">
+      <p class="pt-4 text-gray-600 max-w-prose">
 
 Je m’appelle Mélina. <br><br>
 
