fix favicon on prod

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,15 +6,16 @@
     <meta name="description" content="Boutique en ligne d'articles uniques fabriqués par une artiste">
 
 <!--  Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png" >
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32-f5f581cfd59e55cfdef7ea59d2acfe9d7e1d0a9dbb6b15a638a2ebf6607f9b71.png" >
+
 <!-- Apple Touch Icon (at least 200x200px) -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-icon-180x180.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-icon-180x180-02e25ef9a5cce2a43465e551deb4e5aa5da766ef1a8e8c6408a106050fc64131.png">
 <!-- To run web application in full-screen -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <!-- canonical -->
      <link rel="canonical" href="<%= url_for(:only_path => false) %>" />
-<!--     Osano for cookie consent -->
+<!-- Osano for cookie consent -->
     <script src="https://cmp.osano.com/169ldSSR9wHkkoZj/4484c914-cafd-47a7-8632-4eaf1832bcfc/osano.js"></script>
 
 <!-- Google Analytics -->
