add privacy page, modification to terms and add acceuil link to menu on mobile

--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -1,1 +1,28 @@
-<h1>Privacy</h1>
+<div class="pt-10 pb-24 px-4 max-w-xl mx-auto min-h-screen">
+  <h1 class="text-2xl font-medium text-gray-800">Respect de la vie privée</h1>
+  <span class="text-sm">Mise à jour : 17 mars 2021</span>
+
+  <h2 class="pt-8 text-xl font-bold text-gray-700">Politique de données personnelles</h2>
+
+  <div class="">
+    <div class="pt-6">
+      <p class="pt-2 text-gray-600 max-w-md">Cette politique de données personnelles décrit les pratiques de Mabciaceramic concernant l'utilisation des cookies ainsi que des informations personnelles. Il est possible que cette politique soit modifié avec le temps, si tels est le cas, continuer à utiliser le site indique que vous accepter les modifications et changements. Vous vous engagez à acceptez cette politique ainsi que les conditions générales de vente en créant un compte sur le site ou en remplissant un formulaire de contact. Si vous avez la moindre question, contactez moi, en cas de litige vous pouvez faire une réclamation auprès de la Cnil. </p>
+    </div>
+
+    <div class="pt-4">
+      <span class="font-bold text-lg text-gray-700">Informations personnelles</span>
+      <p class="pt-2 text-gray-600 max-w-md">Lorsque vous utilisez le site, je collecte des informations personnelles sur vous. Cela inclus toutes les informations ou opinions qui peuvent aider à vous indentifier, votre nom, email, adresse postal ou encore votre adresse IP. <br> je ne collecte que les informations que vous me fournissez, afin notamment de pouvoir vous envoyer les objets que vous avez commander. Si vous ne me fournissez pas une adresse de livraison complète je ne serais pas en mesure de vous faire livrer votre commande. </p>
+    </div>
+
+    <div class="pt-4">
+      <span class="font-bold text-lg text-gray-700">Stockage et Modification des informations personnelles</span>
+      <p class="pt-2 text-gray-600 max-w-md">Je fais tout mon possible pour sécuriser le stockage de vos informations personnelles, dans le respect de la lois. Je les conserves uniquement dans le temps nécessaire aux fins du traitement ou à la fourniture du service déterminé. Vous pouvez également à tout moment supprimer votre compte, changer les informations reliées à celui-ci ou votre adresse de livraison. Je m'engage également à informer le plus rapidement possible en cas d'atteinte aux données personnelles.</p>
+    </div>
+
+    <div class="pt-4">
+      <span class="font-bold text-lg text-gray-700">Cookie et autres informations</span>
+      <p class="pt-2 text-gray-600 max-w-md">Les cookies sont des petits fichiers texte qui permettent au site de stocker et retrouver des informations sur vous ou votre ordinateur mais ces informations ne vous identifie pas personnellement. <br> Vous pouvez à tout moment refuser ou personnaliser l'utilisation des cookies. Dans tout les cas, certains cookies essentiels au bon fonctionnement du site ne sont pas désactivable mais ils ne sont pas la pour récupèrer et stocker des informations sur vous. <br> Il existe sur le site 2 catégories de cookies, les essentiels qui permettent le bon fonctionnement du site (avoir un panier d'achat sans avoir à se connecter etc...) et ceux permettant d'analyser de manière anonyme le traffic et ainsi améliorer le site (ceux la sont désactivable).</p>
+    </div>
+
+  </div>
+</div>
