--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -6,10 +6,13 @@
 
   <div class="">
     <div class="pt-6">
-      <span class="font-bold text-lg text-gray-700">J'accepte sans problème les retours et les annulations</span>
-      <p class="pt-2 text-gray-600 max-w-md">Contactez-moi sous : 14 jours après la livraison
-        Renvoyez les articles sous : 30 jours après la livraison
-        Une annulation peut être demandée sous : 12 heures après l'achat</p>
+      <span class="font-bold text-lg text-gray-700">J'accepte les retours (hors commandes personnalisées) et les annulations</span>
+      <p class="pt-2 text-gray-600 max-w-md">
+        Une annulation peut être demandée sous : 24 heures après l'achat <br>
+        En cas de retour : <br>
+        Contactez-moi sous : 14 jours après la livraison <br>
+        Renvoyez les articles sous : 21 jours après la livraison <br>
+        </p>
     </div>
 
     <div class="pt-4">
@@ -19,7 +22,25 @@
 
     <div class="pt-4">
       <span class="font-bold text-lg text-gray-700">Conditions des retours</span>
-      <p class="pt-2 text-gray-600 max-w-md">Les frais de port retour sont à la charge des acheteurs. Si l'article retourné ne se trouve pas dans l'état d'origine, toute perte de valeur est à la charge de l'acheteur.</p>
+      <p class="pt-2 text-gray-600 max-w-md">L’article doit être retourné intact dans son emballage d’origine. Veuillez noter que Les frais d’expédition sont à la charge du client. Un remboursement sera réalisé dans les 21 jours suivant la réception du colis, à condition qu’il ne soit pas endommagé.</p>
     </div>
   </div>
+
+  <h2 class="pt-8 text-xl font-bold text-gray-700">Commandes personnalisés</h2>
+
+  <div class="pt-6">
+    <p class="pt-2 text-gray-600 max-w-md">Pour toutes demandes, veuillez me contacter via le site ou autre plateforme sociale. Après discussion, je vous enverrais un devis.</p>
+  </div>
+
+  <h2 class="pt-8 text-xl font-bold text-gray-700">Paiment et livraison</h2>
+
+  <div class="pt-6">
+    <p class="pt-2 text-gray-600 max-w-md">Un paiement par carte bancaire ou virement est requis au moment de l'achat</p>
+  </div>
+  <div class="pt-6">
+    <span class="font-bold text-lg text-gray-700">Livraison</span>
+    <p class="pt-2 text-gray-600 max-w-md">J’expédie les articles un ou deux jours ouvrables suivant la réception du paiement. Le service postal utilisé est celui de la poste Colissimo. Après votre achat, je vous enverrais le numéro de suivi associé à votre colis afin que vous puissiez suivre son transit. J’emballe chaque commande moi-même. Afin de garantir l’intégrité de chaque pièce, j’utilise un système de double emballage. Si vous souhaitez une assurance ou un suivi supplémentaire, contactez-moi et je vous enverrai un devis.
+Si l’article est endommagé vous devez me le faire savoir immédiatement. Veuillez noter que vous devez m’en informer dans les 3 jours suivant la réception pour être admissible à un remboursement.</p>
+  </div>
+
 </div>
