--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -69,6 +69,12 @@
                 Journal
               </a>
             </li>
+
+            <li>
+              <a href="#" class="text-base text-gray-500 hover:text-gray-900">
+                Magasin
+              </a>
+            </li>
           </ul>
         </div>
       </div>
@@ -93,6 +99,13 @@
             <li>
               <button class="text-base text-gray-500 hover:text-gray-900" onclick="Osano.cm.showDrawer('osano-cm-dom-info-dialog-open')">Préférence de cookie</button>
             </li>
+
+            <li>
+              <a href="#" class="text-base text-gray-500 hover:text-gray-900">
+                Mentions légales
+              </a>
+            </li>
+
           </ul>
         </div>
       </div>
