--- a/app/views/shared/menu/_menu_after_login.html.erb
+++ b/app/views/shared/menu/_menu_after_login.html.erb
@@ -2,6 +2,12 @@
 
   <div class="pb-5 border-b border-gray-200">
     <div>
+      <%= link_to root_path, class:'px-2 mx-2 py-2 mt-1 text-lg flex items-center space-x-4 hover:bg-white rounded p' do %>
+        <svg class="w-8 h-8 text-japonica-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v13m0-13V6a2 2 0 112 2h-2zm0 0V5.5A2.5 2.5 0 109.5 8H12zm-7 4h14M5 12a2 2 0 110-4h14a2 2 0 110 4M5 12v7a2 2 0 002 2h10a2 2 0 002-2v-7"/></svg>
+        <span class="font-semibold text-gray-600">Accueil</span>
+      <% end %>
+    </div>
+    <div>
       <%= link_to items_path, class:'px-2 mx-2 py-2 mt-1 text-lg flex items-center space-x-4 hover:bg-white rounded p' do %>
         <svg class="w-8 h-8 text-japonica-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v13m0-13V6a2 2 0 112 2h-2zm0 0V5.5A2.5 2.5 0 109.5 8H12zm-7 4h14M5 12a2 2 0 110-4h14a2 2 0 110 4M5 12v7a2 2 0 002 2h10a2 2 0 002-2v-7"/></svg>
         <span class="font-semibold text-gray-600">Magasin</span>
