small fix for prod

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -118,7 +118,7 @@
   </section>
 
 <!--   journal section -->
-<%= if Article.all.count >= 3 %>
+<% if Article.all.count >= 3 %>
   <section class="py-12 px-4 bg-gray-100 lg:pb-2 lg:pt-12">
     <div class="max-w-7xl mx-auto">
 
