--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -73,7 +73,7 @@
             </li>
 
             <li>
-              <%= link_to "Mentions légales", root_path, class:'text-base text-gray-500 hover:text-gray-900' %>
+              <%= link_to "Mentions légales", legals_path, class:'text-base text-gray-500 hover:text-gray-900' %>
             </li>
 
           </ul>
